# metadata_service

./: README.md  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  dev_setup.sh  devcontainer.json
alembic/versions/: 8c28383d82be_create_tables.py
db/: metadata.db
scripts/: request_examples.sh
src/db/seeddata/: minimal.sql
src/fastapi_test/: main.py  sql.py
src/fastapi_test/models/: base.py  database.py  identity_models.py
src/fastapi_test/routers/: companies.py  resources.py  teams.py  users.py
src/metadata_service/: db.py  main.py
src/metadata_service/models/: database.py  put.py
src/metadata_service/routers/: __init__.py  company.py  resource.py  team.py  user.py
test/: conftest.py  test_teams.py  test_users.py
test/sample_data/: company.json  resource.json  team.json  update_user.json  user.json
