[project]
name = "fastapi_test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Clawson"}
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "sqlmodel>=0.0.24",
]

[project.scripts]
fastapi_test = "fastapi_test:main"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
